@@ -1,5 +1,5 @@
 /*
- * Copyright © 2021-2023 moehreag <moehreag@gmail.com> & Contributors
+ * Copyright © 2024 moehreag <moehreag@gmail.com> & Contributors
  *
  * This file is part of AxolotlClient.
  *
@@ -22,27 +22,29 @@
 
 package io.github.axolotlclient.modules.auth;
 
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
-import java.io.IOException;
-import java.nio.file.Path;
-import java.util.stream.Collectors;
+import java.util.*;
 
+import com.mojang.authlib.GameProfile;
+import com.mojang.authlib.minecraft.MinecraftProfileTexture;
 import io.github.axolotlclient.AxolotlClient;
-import io.github.axolotlclient.AxolotlClientConfig.options.BooleanOption;
-import io.github.axolotlclient.AxolotlClientConfig.options.GenericOption;
-import io.github.axolotlclient.AxolotlClientConfig.options.OptionCategory;
+import io.github.axolotlclient.AxolotlClientConfig.api.options.OptionCategory;
+import io.github.axolotlclient.AxolotlClientConfig.impl.options.BooleanOption;
+import io.github.axolotlclient.api.API;
+import io.github.axolotlclient.api.types.User;
+import io.github.axolotlclient.api.util.UUIDHelper;
 import io.github.axolotlclient.mixin.MinecraftClientAccessor;
 import io.github.axolotlclient.modules.Module;
-import io.github.axolotlclient.util.Logger;
+import io.github.axolotlclient.util.ThreadExecuter;
 import io.github.axolotlclient.util.notifications.Notifications;
+import io.github.axolotlclient.util.options.GenericOption;
 import lombok.Getter;
-import net.fabricmc.loader.api.FabricLoader;
-import net.minecraft.client.MinecraftClient;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.Session;
+import net.minecraft.client.gui.screen.ConfirmScreen;
+import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.resource.language.I18n;
-import net.minecraft.client.texture.NativeImageBackedTexture;
-import net.minecraft.client.util.Session;
-import net.minecraft.util.Identifier;
+import net.minecraft.client.resource.skin.DefaultSkinUtils;
+import net.minecraft.resource.Identifier;
 
 public class Auth extends Accounts implements Module {
 
@@ -50,78 +52,128 @@ public class Auth extends Accounts implements Module {
 	private static final Auth Instance = new Auth();
 
 	public final BooleanOption showButton = new BooleanOption("auth.showButton", false);
-	private final MinecraftClient client = MinecraftClient.getInstance();
-	private final GenericOption viewAccounts = new GenericOption("viewAccounts", "clickToOpen", (x, y) -> client.setScreen(new AccountsScreen(client.currentScreen)));
+	private final Minecraft client = Minecraft.getInstance();
+	private final GenericOption viewAccounts = new GenericOption("viewAccounts", "clickToOpen", () -> client.openScreen(new AccountsScreen(client.screen)));
+
+	private final Map<String, Identifier> textures = new HashMap<>();
+	private final Set<String> loadingTexture = new HashSet<>();
+	private final Map<String, GameProfile> profileCache = new WeakHashMap<>();
 
 	@Override
 	public void init() {
 		load();
-		this.auth = new MSAuth(AxolotlClient.LOGGER, this);
+		this.auth = new MSAuth(AxolotlClient.LOGGER, this, () -> client.options.language);
 		if (isContained(client.getSession().getUuid())) {
-			current = getAccounts().stream().filter(account -> account.getUuid().equals(client.getSession().getUuid())).collect(Collectors.toList()).get(0);
-			if (current.isExpired()) {
-				current.refresh(auth, () -> {
-				});
-			}
+			current = getAccounts().stream().filter(account -> account.getUuid().equals(client.getSession().getUuid())).toList().get(0);
+			current.setAuthToken(client.getSession().getAccessToken());
+			current.setName(client.getSession().getUsername());
+			/*if (current.needsRefresh()) {
+				current.refresh(auth).thenRun(this::save);
+			}*/
 		} else {
-			current = new MSAccount(client.getSession().getUsername(), client.getSession().getUuid(), client.getSession().getAccessToken());
+			current = new Account(client.getSession().getUsername(), client.getSession().getUuid(), client.getSession().getAccessToken());
 		}
 
-		OptionCategory category = new OptionCategory("auth");
+		OptionCategory category = OptionCategory.create("auth");
 		category.add(showButton, viewAccounts);
 		AxolotlClient.CONFIG.general.add(category);
 	}
 
 	@Override
-	protected Path getConfigDir() {
-		return FabricLoader.getInstance().getConfigDir();
-	}
-
-	@Override
-	protected void login(MSAccount account) {
+	protected void login(Account account) {
 		if (client.world != null) {
 			return;
 		}
 
-		Runnable runnable = () -> {
+		if (account.needsRefresh() && !account.isOffline()) {
+			if (account.isExpired()) {
+				Notifications.getInstance().addStatus("auth.notif.title", "auth.notif.refreshing", account.getName());
+			}
+			account.refresh(auth).thenAccept(res -> res.ifPresent(a -> {
+				if (!a.isExpired()) {
+					login(a);
+				}
+			})).thenRun(this::save);
+		} else {
 			try {
-				((MinecraftClientAccessor) client).setSession(new Session(account.getName(), account.getUuid(), account.getAuthToken(), Session.AccountType.MOJANG.name()));
-				client.getSessionProperties().clear();
-				client.getSessionProperties();
+				API.getInstance().shutdown();
+				((MinecraftClientAccessor) client).setSession(new Session(account.getName(), account.getUuid(), account.getAuthToken(), Session.Type.MOJANG.name()));
+				client.getProfileProperties().clear();
+				client.getProfileProperties();
 				save();
 				current = account;
-				Notifications.getInstance().addStatus(I18n.translate("auth.notif.title"), I18n.translate("auth.notif.login.successful", current.getName()));
+				Notifications.getInstance().addStatus("auth.notif.title", "auth.notif.login.successful", current.getName());
 				AxolotlClient.LOGGER.info("Successfully logged in as " + current.getName());
+				API.getInstance().startup(account);
 			} catch (Exception e) {
 				AxolotlClient.LOGGER.error("Failed to log in! ", e);
-				Notifications.getInstance().addStatus(I18n.translate("auth.notif.title"), I18n.translate("auth.notif.login.failed"));
+				Notifications.getInstance().addStatus("auth.notif.title", "auth.notif.login.failed");
 			}
-		};
+		}
+	}
 
-		if (account.isExpired() && !account.isOffline()) {
-			Notifications.getInstance().addStatus(I18n.translate("auth.notif.title"), I18n.translate("auth.notif.refreshing", account.getName()));
-			account.refresh(auth, runnable);
-		} else {
-			runnable.run();
+	public void loadTextures(String uuid, String name) {
+		if (!textures.containsKey(uuid) && !loadingTexture.contains(uuid)) {
+			ThreadExecuter.scheduleTask(() -> {
+				loadingTexture.add(uuid);
+				GameProfile gameProfile;
+				if (profileCache.containsKey(uuid)) {
+					gameProfile = profileCache.get(uuid);
+				} else {
+					try {
+						UUID uUID = UUIDHelper.fromUndashed(uuid);
+						gameProfile = new GameProfile(uUID, name);
+						client.getSessionService().fillProfileProperties(gameProfile, false);
+					} catch (IllegalArgumentException var2) {
+						gameProfile = new GameProfile(null, name);
+					}
+					profileCache.put(uuid, gameProfile);
+				}
+				client.getSkinManager().register(gameProfile, (type, identifier, minecraftProfileTexture) -> {
+					if (type == MinecraftProfileTexture.Type.SKIN) {
+						textures.put(uuid, identifier);
+						loadingTexture.remove(uuid);
+					}
+				}, false);
+			});
 		}
 	}
 
 	@Override
-	protected Logger getLogger() {
-		return AxolotlClient.LOGGER;
+	void showAccountsExpiredScreen(Account account) {
+		Screen current = client.screen;
+		client.submit(() -> client.openScreen(new ConfirmScreen((bl, i) -> {
+			client.openScreen(current);
+			if (bl) {
+				auth.startDeviceAuth();
+			}
+		}, I18n.translate("auth"), I18n.translate("auth.accountExpiredNotice", account.getName()), 1)));
 	}
 
-	public void loadSkinFile(Identifier skinId, MSAccount account) {
-		if (!account.isOffline() && MinecraftClient.getInstance().getTextureManager().getTexture(skinId) == null) {
-			try {
-				BufferedImage image = ImageIO.read(Auth.getInstance().getSkinFile(account));
-				if (image != null) {
-					client.getTextureManager().loadTexture(skinId, new NativeImageBackedTexture(image));
-					AxolotlClient.LOGGER.debug("Loaded skin file for " + account.getName());
-				}
-			} catch (IOException e) {
-				AxolotlClient.LOGGER.warn("Couldn't load skin file for " + account.getName());
-			}
+	@Override
+	void displayDeviceCode(DeviceFlowData data) {
+		client.submit(() -> client.openScreen(new DeviceCodeDisplayScreen(client.screen, data)));
+	}
+
+	public Identifier getSkinTexture(Account account) {
+		return getSkinTexture(account.getUuid(), account.getName());
+	}
+
+	public Identifier getSkinTexture(User user) {
+		return getSkinTexture(user.getUuid(), user.getName());
+	}
+
+	public Identifier getSkinTexture(String uuid, String name) {
+		loadTextures(uuid, name);
+		Identifier id;
+		if ((id = textures.get(uuid)) != null) {
+			return id;
+		}
+		try {
+			UUID uUID = UUIDHelper.fromUndashed(uuid);
+			return DefaultSkinUtils.getDefaultSkin(uUID);
+		} catch (IllegalArgumentException ignored) {
+			return DefaultSkinUtils.getDefaultSkin();
 		}
 	}
 }
